--- a/Workshop2_662115004.ipynb
+++ b/Workshop2_662115004.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "73cf14e3",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "37a37a6a",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5a3d19c0",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "35e6a09a",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "70a4025e",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,48 @@
       "Average Score (Cleaned Text):  64.44\n",
       "------------------------------\n",
       "\n",
-      "File 'IMDB_Processed_Comparison.csv' has been generated successfully.\n"
+      "File 'IMDB_Processed_Comparison.csv' has been generated successfully.\n",
+      "                                              review  \\\n",
+      "0  One of the other reviewers has mentioned that ...   \n",
+      "1  A wonderful little production. <br /><br />The...   \n",
+      "2  I thought this was a wonderful way to spend ti...   \n",
+      "3  Basically there's a family where a little boy ...   \n",
+      "4  Petter Mattei's \"Love in the Time of Money\" is...   \n",
+      "\n",
+      "                                      cleaned_review  \\\n",
+      "0  One of the other reviewers has mentioned that ...   \n",
+      "1  A wonderful little production. The filming tec...   \n",
+      "2  I thought this was a wonderful way to spend ti...   \n",
+      "3  Basically there's a family where a little boy ...   \n",
+      "4  Petter Mattei's \"Love in the Time of Money\" is...   \n",
+      "\n",
+      "                                              tokens  \\\n",
+      "0  [one, reviewers, mentioned, watching, 1, oz, e...   \n",
+      "1  [wonderful, little, production., filming, tech...   \n",
+      "2  [thought, wonderful, way, spend, time, hot, su...   \n",
+      "3  [basically, there's, family, little, boy, jake...   \n",
+      "4  [petter, mattei's, \"love, time, money\", visual...   \n",
+      "\n",
+      "                                             stemmed  \\\n",
+      "0  [one, review, mention, watch, 1, oz, episod, h...   \n",
+      "1  [wonder, littl, production., film, techniqu, u...   \n",
+      "2  [thought, wonder, way, spend, time, hot, summe...   \n",
+      "3  [basic, there', famili, littl, boy, jake, thin...   \n",
+      "4  [petter, mattei', \"love, time, money\", visual,...   \n",
+      "\n",
+      "                                          lemmatized  \\\n",
+      "0  [one, reviewer, mentioned, watching, 1, oz, ep...   \n",
+      "1  [wonderful, little, production., filming, tech...   \n",
+      "2  [thought, wonderful, way, spend, time, hot, su...   \n",
+      "3  [basically, there's, family, little, boy, jake...   \n",
+      "4  [petter, mattei's, \"love, time, money\", visual...   \n",
+      "\n",
+      "   readability_score_original  readability_score_cleaned  \n",
+      "0                   66.152200                  67.588445  \n",
+      "1                   45.478333                  44.299615  \n",
+      "2                   57.459357                  58.381911  \n",
+      "3                   75.319167                  75.356821  \n",
+      "4                   60.138177                  59.923692  \n"
      ]
     }
    ],
@@ -343,7 +384,8 @@
     "\n",
     "# Save to CSV\n",
     "df_final.to_csv('IMDB_Processed_Comparison.csv', index=False)\n",
-    "print(\"\\nFile 'IMDB_Processed_Comparison.csv' has been generated successfully.\")"
+    "print(\"\\nFile 'IMDB_Processed_Comparison.csv' has been generated successfully.\")\n",
+    "print(df_final.head())"
    ]
   },
   {
